Fixed text above images positioning on mobile and few other devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -233,6 +233,10 @@ select option {
 	left: 50%;
 	top: -35px;
 	width: 128px;
+	-ms-transform: translate(-50%, 0);
+	-webkit-transform: translate(-50%, 0);
+	-moz-transform: translate(-50%, 0);
+	-o-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 	color: white; 
 	font: bold 14px/0px Helvetica, sans-serif;
